# pointcloud_manipulation

./: CMakeLists.txt  package.xml
config/: parameters.yaml
launch/: poi_detection.launch
src/: keypoints_detection.cpp
